# insound_examples

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: add_devserver_target.cmake
examples/sandbox/: CMakeLists.txt
examples/sandbox/android/app/: build.gradle
examples/sandbox/android/app/jni/: CMakeLists.txt
examples/sandbox/android/app/jni/src/: CMakeLists.txt  android_main.cpp
examples/sandbox/android/app/src/main/: AndroidManifest.xml
examples/sandbox/android/app/src/main/java/io/insound/: Insound.java  InsoundActivity.java
examples/sandbox/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
examples/sandbox/common/: CMakeLists.txt  common.cpp  common.h  main.cpp  main_sdl2.cpp  main_sdl3.cpp  plist.in
tools/dev-server/: README.md  file-server.js  main.js  reload-server.js
